[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ErrorLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/AddFoodSource.gd" type="Script" id=2]

[node name="AddFoodSource" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 512.0
margin_bottom = 64.0
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
margin_top = 6.0
margin_right = 254.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Food Source"
align = 2

[node name="FoodSource" type="LineEdit" parent="GridContainer" groups=["inputs"]]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 40.0
margin_right = 254.0
margin_bottom = 58.0
size_flags_horizontal = 3
text = "Service Size"
align = 2

[node name="ServingSize" type="LineEdit" parent="GridContainer" groups=["inputs"]]
margin_left = 258.0
margin_top = 34.0
margin_right = 512.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 68.0
margin_right = 512.0
margin_bottom = 96.0

[node name="Cancel" type="Button" parent="HBoxContainer"]
margin_right = 254.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Add" type="Button" parent="HBoxContainer"]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Add"

[node name="ErrorLabel" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 512.0
margin_bottom = 118.0

[connection signal="pressed" from="HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="HBoxContainer/Add" to="." method="_on_Add_pressed"]
